[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llmlib-amq"
authors = [{name = "Armand McQueen", email = "armandmcqueen@gmail.com"}]
description = "A simple library for making requests to LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "openai",
    "anthropic",
]
dynamic = ["version"]

[project.urls]
Home = "https://github.com/armandmcqueen/llmlib"
Documentation = "https://github.com/armandmcqueen/llmlib#readme"
Issues = "https://github.com/armandmcqueen/llmlib/issues"

[tool.flit.module]
name = "llmlib"

[tool.flit.sdist]
include = ["LICENSE"]
